tests/baselines/reference/classDeclarationBlockScoping2.errors.txt
tests/cases/compiler/classDeclarationBlockScoping2.ts(2,11): error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.
tests/cases/compiler/classDeclarationBlockScoping2.ts(5,15): error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.


==== tests/cases/compiler/classDeclarationBlockScoping2.ts (2 errors) ====
    function f() {
        class C {}
              ~
!!! error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.
        var c1 = C;
        {
            class C {}
                  ~
!!! error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.
            var c2 = C;
        }
        return C === c1;
    }